--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,100 +2,31 @@
 <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
-        android:background="#51DFDFDF"
+        android:background="@color/color_background"
         tools:context=".MainActivity">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        <Button
-                android:text="@string/btnCompare"
-                android:layout_width="wrap_content"
-                android:layout_height="46dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:id="@+id/btnCompare"
-                android:layout_marginStart="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginBottom="36dp"
-                app:layout_constraintBottom_toTopOf="@+id/tvResult01"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <TextView
                 android:text="@string/kotlinBasic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:id="@+id/textView"
                 android:typeface="monospace"
                 android:textAlignment="center"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/btnCompare"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintHorizontal_bias="0.053"
-                app:layout_constraintVertical_bias="0.093" android:textSize="20sp" android:textStyle="bold"
+                android:textSize="20sp"
+                android:textStyle="bold"
                 android:textAllCaps="true"/>
 
-        <TextView
-                android:text="@string/result_01"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/tvResult01"
-                android:typeface="monospace"
-                android:textStyle="bold"
-                android:textAlignment="viewStart"
-                android:layout_marginEnd="8dp"
-                android:maxLines="2"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:padding="5dp"
-                app:layout_constraintHorizontal_bias="0.026"
-                android:layout_marginBottom="68dp"
-                app:layout_constraintBottom_toTopOf="@+id/tvResult02"/>
-
-        <TextView
-                android:text="@string/result_02"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:typeface="monospace"
-                android:textStyle="bold"
-                android:id="@+id/tvResult02"
-                android:maxLines="2"
-                android:padding="5dp"
-                android:textAlignment="textStart"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintHorizontal_bias="0.026"
-                android:layout_marginBottom="76dp"
-                app:layout_constraintBottom_toTopOf="@+id/tvResult03"/>
-
-        <TextView
-                android:text="@string/result_03"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:typeface="monospace"
-                android:textStyle="bold"
-                android:textAlignment="textStart"
-                android:padding="5dp"
-                android:id="@+id/tvResult03"
-                android:maxLines="2"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintHorizontal_bias="0.026"
-                android:layout_marginBottom="100dp"
-                app:layout_constraintBottom_toBottomOf="parent"/>
 
         <EditText
                 android:layout_width="wrap_content"
@@ -105,9 +36,7 @@
                 android:ems="10"
                 android:id="@+id/etInput01"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
                 android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
                 android:typeface="monospace"/>
 
         <EditText
@@ -118,13 +47,72 @@
                 android:ems="10"
                 android:id="@+id/etInput02"
                 android:layout_marginStart="16dp"
-                app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/etInput01"
                 android:typeface="monospace"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/btnCompare"
-                app:layout_constraintVertical_bias="0.295"/>
-    </android.support.constraint.ConstraintLayout>
+                android:layout_marginBottom="8dp"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <Button
+                    android:text="@string/btnCompare"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnCompare"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="36dp"/>
+
+            <Button
+                    android:text="@string/tv_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/btnShowList"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="36dp"
+                    android:elevation="0dp"/>
+
+        </LinearLayout>
+
+        <TextView
+                android:text="@string/result_01"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvResult01"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:padding="8dp"
+                android:layout_marginBottom="8dp"/>
+
+        <TextView
+                android:text="@string/result_02"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:id="@+id/tvResult02"
+                android:padding="8dp"
+                android:textAlignment="textStart"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"/>
+
+        <TextView
+                android:text="@string/result_03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:padding="8dp"
+                android:id="@+id/tvResult03"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="16dp"/>
+    </LinearLayout>
 
 </ScrollView>
